--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- head -->
   <head>
-    <title>Hello World</title>
+    <title>PJC Photographers</title>
     <!-- Latest compiled and minified CSS -->
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	  <!-- Optional theme -->
@@ -9,34 +10,36 @@
     <link rel="stylesheet" href="styles/style.css">
     <!-- Latest compiled and minified JavaScript -->
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/tutorial.js"></script>
   </head>
 
+  <!-- Body -->
   <body>
-    <!-- navigation bar -->
-    <nav>
-      <span class="hidden-xs" id="title_nav">Title Here</span>
-      <ul>
-        <li class="hidden-xs"><a href="#contact">Contact</a></li>
-        <li class="hidden-xs"><a href="#gallery">Gallery</a></li>
-        <li class="hidden-xs"><a href="#porfolio">Porfolio</a></li>
-        <li class="hidden-xs"><a href="#home">Home</a></li>
-        <!-- dropdown menu -->
-        <li class="visible-xs">
-          <span class="dropdown">
-            <button class="dropdown-toggle" type="button" data-toggle="dropdown"><span class="glyphicon-menu-hamburger"></span></button>
-            <ul class="dropdown-menu-right">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#porfolio">Porfolio</a></li>
-              <li><a href="#gallery">Gallery</a></li>
-              <li><a href="#contact">Contact</a></li>
+    <div class="banner">
+      <div class="container">
+    <!-- header page -->
+        <header>
+          <div class="logo">
+            <a href="index.html"><h3>PJC Gallery</h3></a>
+          </div>
+          <!-- navigation bar -->
+          <nav>
+            <ul class="navigation-bar">
+              <li class="hidden-xs"><a href="#home">Home</a></li>
+              <li class="hidden-xs"><a href="#porfolio">Porfolio</a></li>
+              <li class="hidden-xs"><a href="#gallery">Gallery</a></li>
+              <li class="hidden-xs"><a href="#contact">Contact</a></li>
+              <!-- dropdown menu -->
             </ul>
-          </span>
-        </li>
-      </ul>
-    </nav>
-    <!-- title page -->
-    <div class="background-banner">
+          </nav>
+          <div class="clearfix"></div>
+        </header>
+        <div id="banner-text">
+          <h1>Sample Text Sample Text Sample Text</h1>
+          <p>text text text text text text text text text text</p>
+        </div>
+      </div>
     </div>
     <!-- content -->
     <p id="paragraph" onclick="textChange()">
@@ -48,6 +51,7 @@
     </p>
     <!-- footer -->
     <footer>
+      <img href="https://www.facebook.com/PJC-Photography-729802163862623/" src="./images/facebook-icon.gif"></img>
     </footer>
 	</body>
 </html>
