--- a/index.html
+++ b/index.html
@@ -2,56 +2,135 @@
 <html lang="en">
   <!-- head -->
   <head>
-    <title>PJC Photographers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	  <!-- Optional theme -->
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/chocolat.css">
     <!-- Latest compiled and minified JavaScript -->
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="scripts/tutorial.js"></script>
+    <!-- Web title -->
+    <title>PJC Photographers</title>
   </head>
 
   <!-- Body -->
   <body>
-    <div class="banner">
+    <!-- Header -->
+    <header>
       <div class="container">
-    <!-- header page -->
-        <header>
+        <div class="header-main">
           <div class="logo">
-            <a href="index.html"><h3>PJC Gallery</h3></a>
+            <a href="index.html"><h2>PJC Gallery</h2></a>
           </div>
-          <!-- navigation bar -->
+          <!-- Navigation -->
           <nav>
-            <ul class="navigation-bar">
-              <li class="hidden-xs"><a href="#home">Home</a></li>
-              <li class="hidden-xs"><a href="#porfolio">Porfolio</a></li>
-              <li class="hidden-xs"><a href="#gallery">Gallery</a></li>
+            <span class="menu"></span>
+            <ul class="nav-bar">
+              <li class="hidden-xs"><a href="#about">About</a></li>
+              <li class="hidden-xs"><a href="#services">Services</a></li>
+              <li class="hidden-xs"><a href="#portfolio">Portfolio</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
-              <!-- dropdown menu -->
             </ul>
           </nav>
+          <!-- End of Navigation -->
           <div class="clearfix"></div>
-        </header>
-        <div id="banner-text">
-          <h1>Sample Text Sample Text Sample Text</h1>
-          <p>text text text text text text text text text text</p>
+        </div>
+      </div>
+    </header>
+    <!-- End of Header -->
+    <!-- Banner -->
+    <div class="banner">
+      <div class="container">
+        <div class="banner-main">
+          <div class="banner-text">
+            <h2>Slogan Slogan Slogan Slogan Slogan</h2>
+            <p>text text text text text text text text text text text</p>
+            <div class="bann-btn">
+              <a href="#">Read More</a>
+            </div>
+          </div>
+          <div class="clearfix"></div>
         </div>
       </div>
     </div>
-    <!-- content -->
-    <p id="paragraph" onclick="textChange()">
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.
-      Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
-      Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci.
-      Aenean nec lorem. In porttitor. Donec laoreet nonummy augue.
-      Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.
-    </p>
-    <!-- footer -->
+    <!-- End of Banner -->
+
+    <!-- Content -->
+    <div id="about">
+      <div class="container">
+        <div class="heading">
+          <h2>About</h2>
+        </div>
+        <div class="about-bottom">
+          <div class="col-md-6">
+            <h4>Integer facilisis auctor ante. Praesent pellentesque, magna eu egestas varius, ligula ipsum pulvinar mauris, quis sodales urna enim eget enim. Donec sed gravida eros, et auctor enim.</h4>
+					  <p>Praesent pulvinar libero at lectus vulputate blandit. Maecenas mauris dolor, commodo id congue nec, laoreet at turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec nec bibendum arcu. Morbi pretium eleifend sapien et vulputate.</p>
+          </div>
+          <div class="col-md-6 about-right">
+					<div class="abt-one">
+						<div class="abt-left">
+							<span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
+						</div>
+						<div class="abt-right">
+							<p>Fusce vulputate vel nisl at condimentum. Etiam efficitur est eu mauris mattis, vestibulum semper libero tempus. Quisque at augue venenatis, varius est ut, tristique justo.</p>
+						</div>
+						<div class="clearfix"></div>
+					</div>
+					<div class="abt-one">
+						<div class="abt-left">
+							<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+						</div>
+						<div class="abt-right">
+							<p>Fusce vulputate vel nisl at condimentum. Etiam efficitur est eu mauris mattis, vestibulum semper libero tempus. Quisque at augue venenatis, varius est ut, tristique justo.</p>
+						</div>
+					  <div class="clearfix"></div>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Content -->
+
+    <!-- Contact -->
+    <div id="contact">
+		  <div class="container">
+				<div class="contact-left">
+					<div class="add1">
+						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+						<p>The company name, Glasglow Dr 40 Fe 72.</p>
+					</div>
+					<div class="add1">
+						<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+						<p>+755 265 8822 , +955 326 3695</p>
+					</div>
+					<div class="add1">
+						<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+						<p>Email: <a href="mailto:example@email.com">contact@example.com</a></p>
+					</div>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+	  </div>
+    <!-- End of Contact -->
+
+    <!-- Footer -->
     <footer>
-      <img href="https://www.facebook.com/PJC-Photography-729802163862623/" src="./images/facebook-icon.gif"></img>
+      <div class="container">
+        <div class="footer-top">
+          <ul>
+            <li><a href="https://www.facebook.com/PJC-Photography-729802163862623"><span class="fb"></span></a></li>
+            <li><a href="#"><span class="twit"></span></a></li>
+					  <li><a href="#"><span class="google"></span></a></li>
+          </ul>
+          <p>Copyright &copy; 2017 <a target="_blank">Sagitta CA</a> All Rights Reserved.</p>
+        </div>
+      </div>
     </footer>
+    <!-- End of Footer -->
 	</body>
 </html>
