--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
     <!-- Contact -->
     <div id="contact">
 		  <div class="container">
+        <ul class="contact-info">
+          <li><p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>The company name, Glasglow Dr 40 Fe 72.</p></li>
+          <li><p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>+755 265 8822 , +955 326 3695</p></li>
+          <li><p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email: <a href="mailto:example@email.com">contact@example.com</a></p></li>
+        </ul>
+        <!--
 				<div class="contact-left">
 					<div class="add1">
 						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
@@ -113,6 +119,7 @@
 						<p>Email: <a href="mailto:example@email.com">contact@example.com</a></p>
 					</div>
 				</div>
+      -->
 				<div class="clearfix"></div>
 			</div>
 	  </div>
