--- a/index.html
+++ b/index.html
@@ -28,12 +28,24 @@
           </div>
           <!-- Navigation -->
           <nav>
-            <span class="menu"></span>
             <ul class="nav-bar">
               <li class="hidden-xs"><a href="#about">About</a></li>
               <li class="hidden-xs"><a href="#services">Services</a></li>
               <li class="hidden-xs"><a href="#portfolio">Portfolio</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
+              <li class="visible-xs">
+                <span class="dropdown">
+                  <button class="dropdown-btn dropdown-toggle" type="button" data-toggle="dropdown">
+                    <span class="glyphicon glyphicon-menu-hamburger"></span>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-right">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                  </ul>
+                </span>
+              </li>
             </ul>
           </nav>
           <!-- End of Navigation -->
@@ -42,6 +54,7 @@
       </div>
     </header>
     <!-- End of Header -->
+
     <!-- Banner -->
     <div class="banner">
       <div class="container">
@@ -104,22 +117,6 @@
           <li><p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>+755 265 8822 , +955 326 3695</p></li>
           <li><p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email: <a href="mailto:example@email.com">contact@example.com</a></p></li>
         </ul>
-        <!--
-				<div class="contact-left">
-					<div class="add1">
-						<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
-						<p>The company name, Glasglow Dr 40 Fe 72.</p>
-					</div>
-					<div class="add1">
-						<span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-						<p>+755 265 8822 , +955 326 3695</p>
-					</div>
-					<div class="add1">
-						<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-						<p>Email: <a href="mailto:example@email.com">contact@example.com</a></p>
-					</div>
-				</div>
-      -->
 				<div class="clearfix"></div>
 			</div>
 	  </div>
