Add about and features contents

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <div class="container">
         <div class="header-main">
           <div class="logo">
-            <a href="index.html"><h2>PJC Gallery</h2></a>
+            <a href="index.html"><h3>PJC Gallery</h3></a>
           </div>
           <!-- Navigation -->
           <nav>
             <ul class="nav-bar">
               <li class="hidden-xs"><a href="#about">About</a></li>
-              <li class="hidden-xs"><a href="#services">Services</a></li>
+              <li class="hidden-xs"><a href="#features">Features</a></li>
               <li class="hidden-xs"><a href="#portfolio">Portfolio</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
               <li class="visible-xs">
@@ -72,18 +72,53 @@
     </div>
     <!-- End of Banner -->
 
-    <!-- Content -->
+    <!-- Features -->
+    <div id="features">
+      <div class="container">
+        <div class="heading">
+          <h3>check out <span>features</span></h3>
+        </div>
+        <div class="feature-grid col-md-3">
+          <img src="images/icon1.png">
+          <h4>photographer</h4>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="feature-grid col-md-3">
+					<img src="images/icon5.png">
+					<h4>cinematography</h4>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+					<a href="#">read more</a>
+				</div>
+				<div class="feature-grid col-md-3">
+					<img src="images/icon6.png">
+					<h4>photoeditor</h4>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+					<a href="#">read more</a>
+				</div>
+				<div class="feature-grid col-md-3">
+					<img src="images/icon4.png">
+					<h4>photoshoot</h4>
+					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+					<a href="#">read more</a>
+				</div>
+				<div class="clearfix"></div>
+      </div>
+    </div>
+    <!-- End of Features -->
+
+    <!-- About -->
     <div id="about">
       <div class="container">
         <div class="heading">
-          <h2>About</h2>
+          <h3>About</h3>
         </div>
         <div class="about-bottom">
-          <div class="col-md-6">
+          <div class="about-left col-md-6">
             <h4>Integer facilisis auctor ante. Praesent pellentesque, magna eu egestas varius, ligula ipsum pulvinar mauris, quis sodales urna enim eget enim. Donec sed gravida eros, et auctor enim.</h4>
 					  <p>Praesent pulvinar libero at lectus vulputate blandit. Maecenas mauris dolor, commodo id congue nec, laoreet at turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec nec bibendum arcu. Morbi pretium eleifend sapien et vulputate.</p>
           </div>
-          <div class="col-md-6 about-right">
+          <div class="about-right col-md-6">
 					<div class="abt-one">
 						<div class="abt-left">
 							<span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
@@ -107,7 +142,7 @@
         </div>
       </div>
     </div>
-    <!-- End of Content -->
+    <!-- End of About -->
 
     <!-- Contact -->
     <div id="contact">
