Fixed floating issues

--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
         <div class="heading">
           <h3>check out <span>features</span></h3>
         </div>
-        <div class="feature-grid col-md-3">
+        <div class="feature-grid col-sm-3">
           <img src="images/icon1.png">
           <h4>photographer</h4>
           <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
           <a href="#">read more</a>
         </div>
-        <div class="feature-grid col-md-3">
+        <div class="feature-grid col-sm-3">
 					<img src="images/icon5.png">
 					<h4>cinematography</h4>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
 					<a href="#">read more</a>
 				</div>
-				<div class="feature-grid col-md-3">
+				<div class="feature-grid col-sm-3">
 					<img src="images/icon6.png">
 					<h4>photoeditor</h4>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
 					<a href="#">read more</a>
 				</div>
-				<div class="feature-grid col-md-3">
+				<div class="feature-grid col-sm-3">
 					<img src="images/icon4.png">
 					<h4>photoshoot</h4>
 					<p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
