--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   </button>
                   <ul class="dropdown-menu dropdown-menu-right">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#features">Features</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
