update html and css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 	  <!-- Optional theme -->
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/chocolat.css">
     <!-- Latest compiled and minified JavaScript -->
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/tutorial.js"></script>
     <!-- Web title -->
     <title>PJC Photographers</title>
   </head>
@@ -31,7 +29,7 @@
             <ul class="nav-bar">
               <li class="hidden-xs"><a href="#about">About</a></li>
               <li class="hidden-xs"><a href="#features">Features</a></li>
-              <li class="hidden-xs"><a href="#portfolio">Portfolio</a></li>
+              <li class="hidden-xs"><a href="gallery.html">Portfolio</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
               <li class="visible-xs">
                 <span class="dropdown">
