--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <!-- head -->
   <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="PJC Gallery is a photographer site which shares high quality photos">
+    <meta name="keywords" content="PJC Gallery">
+    <meta name="author" content="Jason Chen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -9,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <!-- Web title -->
-    <title>PJC Photographers</title>
+    <title>PJC Gallery</title>
   </head>
 
   <!-- Body -->
@@ -19,7 +23,7 @@
       <div class="container">
         <div class="header-main">
           <div class="logo">
-            <a href="index.html"><h3>PJC Gallery</h3></a>
+            <a href="index.html"><img src="images/logo.png" alt="PJC Gallery logo"><h3>PJC Gallery</h3></a>
           </div>
           <!-- Navigation -->
           <nav>
