--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <nav>
             <ul class="nav-bar">
               <li class="hidden-xs"><a href="#about">About</a></li>
-              <li class="hidden-xs"><a href="#features">Features</a></li>
+              <li class="hidden-xs"><a href="#services">Services</a></li>
               <li class="hidden-xs"><a href="gallery.html">Portfolio</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
               <li class="visible-xs">
@@ -39,7 +39,7 @@
                   </button>
                   <ul class="dropdown-menu dropdown-menu-right">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#features">Features</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
@@ -70,41 +70,6 @@
       </div>
     </div>
     <!-- End of Banner -->
-
-    <!-- Features -->
-    <div id="features">
-      <div class="container">
-        <div class="heading">
-          <h3>check out <span>features</span></h3>
-        </div>
-        <div class="feature-grid col-sm-3">
-          <img src="images/icon1.png">
-          <h4>photographer</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="feature-grid col-sm-3">
-          <img src="images/icon5.png">
-          <h4>cinematography</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="feature-grid col-sm-3">
-          <img src="images/icon6.png">
-          <h4>photoeditor</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="feature-grid col-sm-3">
-          <img src="images/icon4.png">
-          <h4>photoshoot</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="clearfix"></div>
-      </div>
-    </div>
-    <!-- End of Features -->
 
     <!-- About -->
     <div id="about">
@@ -142,6 +107,85 @@
       </div>
     </div>
     <!-- End of About -->
+
+    <!-- services -->
+    <div id="services">
+      <div class="container">
+        <div class="heading">
+          <h3><span>services</span></h3>
+        </div>
+        <div class="service-grid col-sm-3">
+          <img src="images/icon1.png">
+          <h4>photographer</h4>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="service-grid col-sm-3">
+          <img src="images/icon5.png">
+          <h4>cinematography</h4>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="service-grid col-sm-3">
+          <img src="images/icon6.png">
+          <h4>photoeditor</h4>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="service-grid col-sm-3">
+          <img src="images/icon4.png">
+          <h4>photoshoot</h4>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
+          <a href="#">read more</a>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+    <!-- End of services -->
+
+    <!-- Gallery -->
+    <div id="gallery">
+      <div class="heading">
+        <h3>Latest Gallery</h3>
+      </div>
+      <!-- Slideshow -->
+      <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="images/slide1.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="images/slide2.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="item">
+              <img src="images/slide3.jpg" alt="" style="width:100%;">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="left carousel-control left-btn" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right-btn right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+      <!-- End of Slideshow -->
+    </div>
+    <!-- End of Gallery -->
 
     <!-- Contact -->
     <div id="contact">
