--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="nav-bar">
               <li class="hidden-xs"><a href="#about">About</a></li>
               <li class="hidden-xs"><a href="#services">Services</a></li>
-              <li class="hidden-xs"><a href="gallery.html">Portfolio</a></li>
+              <li class="hidden-xs"><a href="#gallery">Gallery</a></li>
               <li class="hidden-xs"><a href="#contact">Contact</a></li>
               <li class="visible-xs">
                 <span class="dropdown">
@@ -41,7 +41,7 @@
                   <ul class="dropdown-menu dropdown-menu-right">
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                   </ul>
                 </span>
