--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="keywords" content="PJC Gallery">
     <meta name="author" content="Jason Chen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo-1.png" />
+    <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo-1.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/logo.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://xjasonx.github.io/Photographer-Site/images/logo.ico">
     <!-- Web title -->
     <title>PJC Gallery</title>
   </head>
