--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
             <div class="item">
               <img src="images/slide3.jpg" alt="" style="width:100%;">
             </div>
+            <div class="item">
+              <img src="images/slide4.jpg" alt="" style="width:100%;">
+            </div>
           </div>
 
           <!-- Left and right controls -->
