meta tag comments

--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <html lang="en">
   <!-- head -->
   <head>
+    <!-- Basic Setup Meta Tags -->
     <meta charset="UTF-8">
     <meta name="description" content="PJC Gallery is a photographer site which shares high quality photos">
     <meta name="keywords" content="PJC Gallery">
     <meta name="author" content="Jason Chen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph Meta Tags -->
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
+
+    <!-- JQuery Import -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+
+    <!-- Bootstrap CSS/JS Imports -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Default Styling -->
     <link rel="stylesheet" href="styles/style.css">
+
+    <!-- Icons -->
     <link rel="shortcut icon" type="image/x-icon" href="/images/logo.ico">
     <!-- Web title -->
     <title>PJC Gallery</title>
