--- a/index.html
+++ b/index.html
@@ -11,20 +11,16 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
-
     <!-- JQuery Import -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-
+    <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap CSS/JS Imports -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- Default Styling -->
     <link rel="stylesheet" href="styles/style.css">
 
     <!-- Icons -->
-    <link rel="shortcut icon" type="image/x-icon" href="/images/logo.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
     <!-- Web title -->
     <title>PJC Gallery</title>
   </head>
@@ -33,63 +29,33 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="container">
-        <div class="header-main">
-          <div class="logo">
-            <a href="index.html"><img src="images/rsz_1.png" alt="PJC Gallery logo"><h3>PJC Gallery</h3></a>
+      <div class="banner" id="home">
+        <div class="container">
+            <nav>
+              <ul class="row align-items-center">
+                <li class="col-md-2 hidden-xs"><a href="#home">Home</a></li>
+                <li class="col-md-2 hidden-xs"><a href="#about">About</a></li>
+                <li class="col-md-4 hidden-xs"><a href="#home"><img class="logo" src="images/rsz_logo.png"></a></li>
+                <li class="col-md-2 hidden-xs"><a href="gallery.html">Gallery</a></li>
+                <li class="col-md-2 hidden-xs"><a href="#contact">Contact</a></li>
+              </ul>
+              <div class="clearfix"></div>
+              <hr>
+            </nav>
+            <div class="banner-info">
+              <h3 class="cover-heading">Capture your memory</h3>
+              <p class="lead">Print your life in a simple photo</p>
+            </div>
           </div>
-          <!-- Navigation -->
-          <nav>
-            <ul class="nav-bar">
-              <li class="hidden-xs"><a href="#about">About</a></li>
-              <li class="hidden-xs"><a href="#services">Services</a></li>
-              <li class="hidden-xs"><a href="#gallery">Gallery</a></li>
-              <li class="hidden-xs"><a href="#contact">Contact</a></li>
-              <li class="visible-xs">
-                <span class="dropdown">
-                  <button class="dropdown-btn dropdown-toggle" type="button" data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
-                </span>
-              </li>
-            </ul>
-          </nav>
-          <!-- End of Navigation -->
-          <div class="clearfix"></div>
         </div>
       </div>
     </header>
     <!-- End of Header -->
 
-    <!-- Banner -->
-    <div class="banner">
-      <div class="container">
-        <div class="banner-main">
-          <div class="banner-text">
-            <h2>Slogan Slogan Slogan Slogan Slogan</h2>
-            <p>text text text text text text text text text text text</p>
-            <div class="bann-btn">
-              <a href="#">Read More</a>
-            </div>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-    </div>
-    <!-- End of Banner -->
-
     <!-- About -->
-    <div id="about">
+    <div class="content" accesskey=""id="about">
       <div class="container">
-        <div class="heading">
-          <h3>About</h3>
-        </div>
+        <h1 class="page-header">About</h1>
         <div class="about-bottom">
           <div class="about-left col-md-6">
             <h4>Integer facilisis auctor ante. Praesent pellentesque, magna eu egestas varius, ligula ipsum pulvinar mauris, quis sodales urna enim eget enim. Donec sed gravida eros, et auctor enim.</h4>
