Re-design Content: About

--- a/index.html
+++ b/index.html
@@ -31,21 +31,20 @@
     <header>
       <div class="banner" id="home">
         <div class="container">
-            <nav>
-              <ul class="row align-items-center">
-                <li class="col-md-2 hidden-xs"><a href="#home">Home</a></li>
-                <li class="col-md-2 hidden-xs"><a href="#about">About</a></li>
-                <li class="col-md-4 hidden-xs"><a href="#home"><img class="logo" src="images/rsz_logo.png"></a></li>
-                <li class="col-md-2 hidden-xs"><a href="gallery.html">Gallery</a></li>
-                <li class="col-md-2 hidden-xs"><a href="#contact">Contact</a></li>
-              </ul>
-              <div class="clearfix"></div>
-              <hr>
-            </nav>
-            <div class="banner-info">
-              <h3 class="cover-heading">Capture your memory</h3>
-              <p class="lead">Print your life in a simple photo</p>
-            </div>
+          <nav>
+            <ul class="row align-items-center hidden-xs-down">
+              <li class="col-sm-2"><a href="#home">Home</a></li>
+              <li class="col-sm-2"><a href="#about">About</a></li>
+              <li class="col-sm-4"><a href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
+              <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
+              <li class="col-sm-2"><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="clearfix"></div>
+            <hr class="hidden-xs-down">
+          </nav>
+          <div class="row banner-info">
+            <h3 class="col-sm-12">Capture your memory</h3>
+            <p class="lead col-sm-12">Print your life in a simple photo</p>
           </div>
         </div>
       </div>
@@ -53,71 +52,25 @@
     <!-- End of Header -->
 
     <!-- About -->
-    <div class="content" accesskey=""id="about">
+    <div class="content" id="about">
       <div class="container">
         <h1 class="page-header">About</h1>
-        <div class="about-bottom">
-          <div class="about-left col-md-6">
-            <h4>Integer facilisis auctor ante. Praesent pellentesque, magna eu egestas varius, ligula ipsum pulvinar mauris, quis sodales urna enim eget enim. Donec sed gravida eros, et auctor enim.</h4>
-            <p>Praesent pulvinar libero at lectus vulputate blandit. Maecenas mauris dolor, commodo id congue nec, laoreet at turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec nec bibendum arcu. Morbi pretium eleifend sapien et vulputate.</p>
+        <div class="row align-items-center about_detail">
+          <div class="col-md-6">
+           <h2>Integer facilisis auctor ante. Praesent pellentesque, magna eu egestas varius, ligula ipsum pulvinar mauris, quis sodales urna enim eget enim. Donec sed gravida eros, et auctor enim.</h2>
+           <p>Praesent pulvinar libero at lectus vulputate blandit. Maecenas mauris dolor, commodo id congue nec, laoreet at turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec nec bibendum arcu. Morbi pretium eleifend sapien et vulputate.</p>
           </div>
-          <div class="about-right col-md-6">
-          <div class="abt-one">
-            <div class="abt-left">
-              <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>
-            </div>
-            <div class="abt-right">
-              <p>Fusce vulputate vel nisl at condimentum. Etiam efficitur est eu mauris mattis, vestibulum semper libero tempus. Quisque at augue venenatis, varius est ut, tristique justo.</p>
-            </div>
-            <div class="clearfix"></div>
+          <div class="col-md-6">
+            <img class="img-fluid mx-auto d-block" src="http://placehold.it/400x300" alt="">
           </div>
-          <div class="abt-one">
-            <div class="abt-left">
-              <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-            </div>
-            <div class="abt-right">
-              <p>Fusce vulputate vel nisl at condimentum. Etiam efficitur est eu mauris mattis, vestibulum semper libero tempus. Quisque at augue venenatis, varius est ut, tristique justo.</p>
-            </div>
-            <div class="clearfix"></div>
-          </div>
-        </div>
-        <div class="clearfix"></div>
         </div>
       </div>
     </div>
-    <!-- End of About -->
 
     <!-- services -->
-    <div id="services">
+    <div class="content" id="services">
       <div class="container">
-        <div class="heading">
-          <h3><span>services</span></h3>
-        </div>
-        <div class="service-grid col-sm-3">
-          <img src="images/icon1.png">
-          <h4>photographer</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="service-grid col-sm-3">
-          <img src="images/icon5.png">
-          <h4>cinematography</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="service-grid col-sm-3">
-          <img src="images/icon6.png">
-          <h4>photoeditor</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="service-grid col-sm-3">
-          <img src="images/icon4.png">
-          <h4>photoshoot</h4>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisc ing. Aliquam viverra   dolor sit consectetur nibh.</p>
-          <a href="#">read more</a>
-        </div>
-        <div class="clearfix"></div>
+        <h1 class="page-header">Team</h1>
       </div>
     </div>
     <!-- End of services -->
