--- a/index.html
+++ b/index.html
@@ -67,13 +67,65 @@
       </div>
     </div>
 
-    <!-- services -->
-    <div class="content" id="services">
+    <!-- Team -->
+    <div class="content" id="team">
       <div class="container">
         <h1 class="page-header">Team</h1>
+        <section class="team_member">
+          <div class="row member">
+            <div class="card member_profile">
+              <img class="rounded card-img-top" src="images/rsz_PeiChu.png" alt="Joseph, Pei Chu">
+              <div class="card-block">
+                <h2 class="card-title">Joseph Chu</h2>
+              </div>
+            </div>
+            <div class="member_info float-left">
+              <h4>Photo Taking Points:</h4>
+              <h5>Pet:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 25%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <h5>Landscape:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <h5>Fashion:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 75%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>Some quick example text to build on the card title and make up the bulk of the card's content...<a href="#">Read More</a></p>
+            </div>
+            <div class="cleafix"></div>
+          </div>
+          <div class="row member">
+            <div class="card member_profile">
+              <img class="rounded card-img-top" src="images/rsz_EllisonChen.png" alt="Ellison Chen">
+              <div class="card-block">
+                <h2 class="card-title">Ellison Chen</h2>
+              </div>
+            </div>
+            <div class="member_info float-left">
+              <h4>Photo Taking Points:</h4>
+              <h5>Baby:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <h5>Landscape:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 45%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <h5>Fashion:</h5>
+              <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 35%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>Some quick example text to build on the card title and make up the bulk of the card's content...<a href="#">Read More</a></p>
+            </div>
+            <div class="cleafix"></div>
+          </div>
+        </section>
       </div>
     </div>
-    <!-- End of services -->
+    <!-- End of team -->
 
     <!-- Gallery -->
     <div id="gallery">
