--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
     <!-- JQuery Import -->
     <script src="js/jquery-3.2.1.min.js"></script>
-    <!-- Bootstrap CSS/JS Imports -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- Bootstrap 4 CSS Imports -->
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- Default Styling -->
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/style.css">
-
     <!-- Icons -->
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
     <!-- Web title -->
@@ -33,8 +33,8 @@
         <div class="container">
           <nav>
             <ul class="row align-items-center hidden-xs-down">
-              <li class="col-sm-2"><a href="#home">Home</a></li>
               <li class="col-sm-2"><a href="#about">About</a></li>
+              <li class="col-sm-2"><a href="#team">Team</a></li>
               <li class="col-sm-4"><a href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
               <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
               <li class="col-sm-2"><a href="#contact">Contact</a></li>
@@ -125,55 +125,16 @@
         </section>
       </div>
     </div>
-    <!-- End of team -->
+    <!-- End of Team -->
 
-    <!-- Gallery -->
-    <div id="gallery">
-      <div class="heading">
-        <h3>Latest Gallery</h3>
-      </div>
-      <!-- Slideshow -->
+    <!-- Service -->
+    <div class="content" id="service">
       <div class="container">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-          </ol>
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner">
-            <div class="item active">
-              <img src="images/slide1.jpg" alt="" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/slide2.jpg" alt="" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/slide3.jpg" alt="" style="width:100%;">
-            </div>
-            <div class="item">
-              <img src="images/slide4.jpg" alt="" style="width:100%;">
-            </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control left-btn" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right-btn right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-        <div class="clearfix"></div>
+        <h1 class="page-header">Title</h1>
+        <h2 class="text-center">not sure what to write</h2>
       </div>
-      <!-- End of Slideshow -->
     </div>
-    <!-- End of Gallery -->
+    <!-- End of Service -->
 
     <!-- Contact -->
     <div id="contact">
