Add mobile and fixed navigation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
-    <!-- JQuery Import -->
+    <!-- JQuery 3.2.1 Import -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <!-- Tether Import -->
     <script src="js/tether.min.js"></script>
