--- a/gallery.html
+++ b/gallery.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
 
-  <!-- JQuery Import -->
+  <!-- JQuery 3.2.1 Import -->
   <script src="js/jquery-3.2.1.min.js"></script>
-  <!-- Bootstrap 4 CSS Imports -->
-  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <!-- Tether Import -->
+  <script src="js/tether.min.js"></script>
+  <!-- Bootstrap 4 Imports -->
+  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
   <!-- Default Styling -->
   <link rel="stylesheet" href="styles/nav.css">
   <link rel="stylesheet" href="styles/footer.css">
   <link rel="stylesheet" href="styles/gallery.css">
+  <!-- Default Scripts -->
+  <script src="js/header-animation.js"></script>
   <!-- Icons -->
   <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
   <!-- Web title -->
@@ -25,6 +30,24 @@
   <!-- Header -->
   <header>
     <div class="banner">
+      <div class="fixed-nav">
+        <div class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-inverse" role="navigation">
+          <div class="nav-container container">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#home">PJC Gallery</a>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="container">
         <nav>
           <ul class="row align-items-center hidden-xs-down">
