Fix script linking

--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="styles/footer.css">
   <link rel="stylesheet" href="styles/gallery.css">
   <!-- Default Scripts -->
-  <script src="js/header-animation.js"></script>
+  <script src="js/scrolling-nav.js"></script>
   <!-- Icons -->
   <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
   <!-- Web title -->
