--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <div class="content" id="service">
       <div class="container">
         <h1 class="page-header">Title</h1>
-        <h2 class="text-center">Constracting...</h2>
+        <h2 class="tlt" data-in-effect="rollIn">Constracting...</h2>
       </div>
     </div>
     <!-- End of Service -->
