Add social media icons

--- a/index.html
+++ b/index.html
@@ -176,10 +176,12 @@
     <footer id="footer">
       <div class="container">
         <ul>
-          <li><a href="https://www.facebook.com/PJC-Photography-729802163862623"><span class="fb"> </span></a></li>
-          <li><a href="#"><span class="twit"></span></a></li>
-          <li><a href="#"><span class="google"></span></a></li>
+          <li><a href="https://www.facebook.com/PJC-Photography-729802163862623"><span class="fb"></span></a></li>
+          <li><a href="#"><span class="twitter"></span></a></li>
+          <li><a href="#"><span class="google-plus"></span></a></li>
+          <li><a href="#"><span class="instagram"></span></a></li>
         </ul>
+        <p>Copyright &copy; 2017 <a target="_blank">Sagitta CA</a> All Rights Reserved.</p>
       </div>
     </footer>
     <!-- End of Footer -->
